# livekit-voice-agent

./: .dockerignore  .env.example  .gitignore  AI_CONFIG.md  AUDIT_REPORT.md  CALL_LOGGING.md  CHANGELOG.md  COOLIFY_DEPLOYMENT.md  DATABASE.md  Dockerfile  Dockerfile.server  GRANT_ONE_PAGER.md  IMPLEMENTATION_PLAN_6_WEEKS.md  INTEGRATION_COMPLETE.md  LICENSE  PRD_DETAILED.md  PRODUCTION_READY_INDIA.md  QUICK_START_AI_CONFIG.md  README.md  RECORDING_AND_TRANSCRIPTS.md  WHISPEY_SETUP.md  _check_calls.py  _e2e_test.py  agent_instructions.txt  audio_router.py  check_prompt.py  config.py  db_schema_update.sql  egress_manager.py  fix_agent.py  fix_db_config.py  frontend_log.txt  generate_token.py  livekit.toml  make_call.py  mcp_integration.py  n8n_outbound_flow.json  neon_db.py  outbound_agent.py  package-lock.json  (+17 more)
.github/workflows/: ci.yml
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
migrations/: 002_prompt_lab.sql  003_platform_links.sql  004_tenants.sql
outbound/: config.py  lifecycle.py  metadata.py  providers.py  recording.py  sarvam_tts.py  sip.py  state_machine.py  tenant_profile.py  tools.py
scripts/: synthetic_call_probe.py
tests/: test_agent.py  test_audio_proxy.py  test_audit_refactor.py  test_config.py  test_conversation_simulator.py  test_error_handling.py  test_make_call.py  test_metadata.py  test_providers.py  test_sarvam_tts.py  test_security.py  test_sip.py  test_smoke.py  test_state_machine.py  test_tenant_endpoints.py  test_tenant_profile.py  test_tools.py
(+41 files in other folders)
